<resources>
    <string name="app_name">Password Box</string>
    <string name="default_password_name">Password Repository</string>
    <!--Valores de la ventana de login-->
    <string name="dialog_login_message">A repository for the user already exists, log in with your username and password</string>
    <string name="dialog_login_title">A repository already exists</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_register">Register</string>
    <string name="how_work">How works</string>
    <string name="volver_button">Back</string>
    <string name="app_info">
        Welcome to Password Box.\n\n
         In this application you will be able to store your passwords safely.\n\n
         The application will store your passwords
         encrypted with the password you choose in the root directory
         of your device, where you can find it with the following
         format: \"example@email.com.keys\", if you want to create
         a backup on google drive.\n\n
         Remember not to forget your master password or you will not be able to recover your passwords.
    </string>
    <!-- Valores de la ventana edicion-->
    <string name="name_label">Name</string>
    <string name="url_label">URL</string>
    <string name="user_label">Username</string>
    <string name="password_label">Password</string>
    <string name="delete_title">Delete password</string>
    <string name="delete_title_group">Delete group</string>
    <string name="delete_message">Do you want delete password from repository?</string>
    <string name="delete_message_group">Do you want delete group from repository?</string>
    <string name="clip_text">to clipboard</string>
    <string name="save_label">Save</string>
    <string name="delete_label">Delete</string>
    <string name="cancel_label">Cancel</string>

    <!-- Strings related to login -->
    <string name="password">Password</string>
    <string name="description">Password</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Password Box</string>
    <string name="label_combo">Tipo de Autenticación</string>
    <string name="registrarse">Create repository</string>
    <string name="remember">Remember me?</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_invalid_password">Password too short, must be at least 6 characters</string>
    <string name="error_incorrect_password">Wrong password</string>
    <string name="error_field_required">Required Field</string>

    <!--menu items-->
    <string name="home">Home</string>
    <string name="add_group">Add new group</string>
    <string name="add_password">Add new password</string>
    <string name="settings">Settings</string>

    <string name="elementos">Passwords</string>

    <string name="generar">Generate password</string>
    <string name="mayusculas">Uppercase</string>
    <string name="simbolos">Symbols</string>
    <string name="numeros">Numbers</string>
    <string name="longitud">Length</string>
    <string name="solo_numeros">Only Numbers</string>

    <string name="permision_title">Disck access permission</string>
    <string name="permision_mensaje">This application need access to disk for save your file with passwords</string>


</resources>
