<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="src.jmmunoz.es.passwordprotector.EditPasswordActivity">



            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="10dp">

                <TextView
                    android:id="@+id/label_nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/name_label" />

                <EditText
                    android:id="@+id/nombre_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/etPasswordLayout"
                    android:layout_below="@+id/label_nombre"
                    android:ems="10"
                    android:inputType="text" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/etPasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/password_label"
                    android:layout_margin="5dp"
                    android:layout_toStartOf="@+id/password_copy"
                    app:passwordToggleEnabled="true">

                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/save_label"
                    android:textColor="@android:color/background_light" />

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/cancel_label"
                    android:textColor="@android:color/background_light" />

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/delete_label"
                    android:textColor="@android:color/background_light" />

                <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adView_password"
                    android:layout_width="392dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/nombre_text"
                    ads:adSize="BANNER"
                    ads:adUnitId="ca-app-pub-2198662666880421/3663600734"
                    ads:layout_anchor="@+id/include"
                    ads:layout_anchorGravity="bottom|center"
                    tools:layout_editor_absoluteX="-134dp"></com.google.android.gms.ads.AdView>

            </RelativeLayout>





</android.support.constraint.ConstraintLayout>
</ScrollView>